# book_agent

./: .env.example  .gitignore  404.html  Original_study.md  README.md  experiment_runner.py  index.html  main.py  publish_web.py  pyproject.toml  sitemap.xml
.github/workflows/: publish.yml
2026nyeon-weoldeukeob-daehanmingug-useung/: chapter-01.html  chapter-02.html
agent/: __init__.py
agent/agents/: __init__.py  editor_agent.py  evaluator_agent.py  planning_agent.py  research_agent.py  reviewer_agent.py  writing_agent.py
agent/configs/: models.yaml
agent/inputs/: __init__.py  base.py  data_extractor.py  file_extractor.py  url_extractor.py
agent/prompts/: editor_prompts.py  evaluator_prompts.py  planning_prompts.py  research_prompts.py  reviewer_prompts.py
agent/providers/: __init__.py  base.py  claude_vertex.py  gemini.py  ollama.py  openai.py
agent/workflows/: __init__.py  book_workflow.py  chapter_workflow.py  output_manager.py  state.py  web_publisher.py
agent_book_writer_v2/: README.md  main.py  pyproject.toml  sample-toc.json
agent_book_writer_v2/agents/: evaluator_agent.py  reviewer_agent.py
agent_book_writer_v2/prompts/: __init__.py  writing_prompts.py
agent_book_writer_v2/tests/: test_agents.py
agent_book_writer_v2/workflows/: book_workflow.py  output_manager.py
agents/: editor_agent.py  planning_agent.py  research_agent.py  writing_agent.py
chapters/chapter-01-kajaheuseutan-sogae/: index.html
chapters/chapter-02-yeohaeng-junbi/: index.html
chapters/chapter-03-kajaheuseutanyi-juyo-gwangwangji/: index.html
chapters/chapter-04-hyeonji-saenghwal-annae/: index.html
chapters/chapter-05-yeohaeng-tibgwa-juyisahang/: index.html
configs/: book_config.yaml  models.yaml
daehagweonsaeng-talculilgi/: chapter-01.html  chapter-02.html  chapter-03.html  chapter-04.html  chapter-05.html
docs/: book_agent_model_analysis.md  evaluation_criteria_research.md
gemini-test/paisseon-gico/: chapter-01.html
keti-ai-saengseong-imiji-1deung/: chapter-01.html  chapter-02.html
kz-travel-guide ver1/: chapter-01.html  chapter-02.html  chapter-03.html  chapter-04.html  chapter-05.html
prompts/: evaluator_prompts.py  planning_prompts.py
provider-test/git-gico/: chapter-01.html  chapter-02.html  chapter-03.html  chapter-04.html  chapter-05.html  chapter-06.html  chapter-07.html
python-for-data-scientists-a-practical-guide/: chapter-01.html  chapter-02.html  chapter-03.html
search/: search_index.json
tests/: test_agents.py  test_inputs.py  test_providers.py
toc/: sample-toc.json  tips-kazakhstan.json
web/: app.py  paths.py
web/routes/: outputs.py  pipeline.py  reader.py  toc.py
web/services/: books.py  chapters.py  library.py  ollama.py  runner.py
web/templates/: _book_cards.html  base.html  dashboard.html  index.html  job.html  outputs.html  pipeline.html  reader.html  toc_form.html  toc_list.html
workflows/: chapter_workflow.py  state.py
(+4 files in other folders)
