[project]
name = "agent-book-writer-v2"
version = "3.0.0"
description = "Multi-agent book writer using LangGraph + Ollama"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    "pyyaml>=6.0",
    "python-slugify>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
web = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "markdown>=3.6",
]
publish = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.0",
]

[project.scripts]
book-agent = "main:main"
book-web = "web.app:run_server"
book-library = "library.generator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
